--- a/KS.SportsPool.Component/KS.SportsPool.Component.csproj
+++ b/KS.SportsPool.Component/KS.SportsPool.Component.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19DCB955-EBFC-4A8A-8DA6-FCEF6EBC3BBA}</ProjectGuid>
+    <ProjectGuid>{EEF5D7DB-9C8F-4B35-B6DE-2F429924DE18}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KS.SportsPool.Data</RootNamespace>
-    <AssemblyName>KS.SportsPool.Data</AssemblyName>
+    <RootNamespace>KS.SportsPool.Component</RootNamespace>
+    <AssemblyName>KS.SportsPool.Component</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,13 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,31 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataAccess\Existing\ActionNotSupportedException.cs" />
-    <Compile Include="DataAccess\Existing\ItemAlreadyExistsException.cs" />
-    <Compile Include="DataAccess\Repository\Implementation\BaseDapperRepository.cs" />
-    <Compile Include="DataAccess\Repository\Implementation\DapperCityRepository.cs" />
-    <Compile Include="DataAccess\Repository\Implementation\SqlConnectionManager.cs" />
-    <Compile Include="DataAccess\Repository\Interface\IAthleteRepository.cs" />
-    <Compile Include="DataAccess\Repository\Interface\IDataRepository.cs" />
-    <Compile Include="DataAccess\Repository\Interface\IRepositoryCollection.cs" />
-    <Compile Include="POCO\TeamPick.cs" />
-    <Compile Include="POCO\AthletePick.cs" />
-    <Compile Include="POCO\City.cs" />
-    <Compile Include="POCO\PocoDataObject.cs" />
-    <Compile Include="POCO\PoolEntry.cs" />
-    <Compile Include="POCO\Team.cs" />
+    <Compile Include="Caching\Implementation\MemoryCacheProvider.cs" />
+    <Compile Include="Caching\Implementation\NoOpCacheProvider.cs" />
+    <Compile Include="Caching\Interface\ICacheProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <ProjectReference Include="..\KS.SportsPool.Component\KS.SportsPool.Component.csproj">
-      <Project>{eef5d7db-9c8f-4b35-b6de-2f429924de18}</Project>
-      <Name>KS.SportsPool.Component</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
