--- a/KS.SportsPool.Data.Test/KS.SportsPool.Data.Test.csproj
+++ b/KS.SportsPool.Data.Test/KS.SportsPool.Data.Test.csproj
@@ -58,6 +58,9 @@
       <Name>KS.SportsPool.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
