--- a/KS.SportsPool.Data/KS.SportsPool.Data.csproj
+++ b/KS.SportsPool.Data/KS.SportsPool.Data.csproj
@@ -48,14 +48,16 @@
     <Compile Include="DataAccess\Existing\ActionNotSupportedException.cs" />
     <Compile Include="DataAccess\Existing\ItemAlreadyExistsException.cs" />
     <Compile Include="DataAccess\Repository\Implementation\BaseDapperRepository.cs" />
-    <Compile Include="DataAccess\Repository\Implementation\DapperCityRepository.cs" />
+    <Compile Include="DataAccess\Repository\Implementation\DapperTeamRepository.cs" />
+    <Compile Include="DataAccess\Repository\Implementation\DapperAthleteRepository.cs" />
     <Compile Include="DataAccess\Repository\Implementation\SqlConnectionManager.cs" />
+    <Compile Include="DataAccess\Repository\Interface\ITeamRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\IAthleteRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\IDataRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\IRepositoryCollection.cs" />
     <Compile Include="POCO\TeamPick.cs" />
     <Compile Include="POCO\AthletePick.cs" />
-    <Compile Include="POCO\City.cs" />
+    <Compile Include="POCO\Athlete.cs" />
     <Compile Include="POCO\PocoDataObject.cs" />
     <Compile Include="POCO\PoolEntry.cs" />
     <Compile Include="POCO\Team.cs" />
