--- a/KS.SportsPool.MVC/Web.config
+++ b/KS.SportsPool.MVC/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-KS.SportsPool.MVC-20160403061931.mdf;Initial Catalog=aspnet-KS.SportsPool.MVC-20160403061931;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="HockeyPoolDB" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=KS.SportsPool.Database;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>    
     <add key="webpages:Version" value="3.0.0.0" />
