--- a/KS.SportsPool.Data/KS.SportsPool.Data.csproj
+++ b/KS.SportsPool.Data/KS.SportsPool.Data.csproj
@@ -48,10 +48,15 @@
     <Compile Include="DataAccess\Existing\ActionNotSupportedException.cs" />
     <Compile Include="DataAccess\Existing\ItemAlreadyExistsException.cs" />
     <Compile Include="DataAccess\Repository\Implementation\BaseDapperRepository.cs" />
+    <Compile Include="DataAccess\Repository\Implementation\DapperTeamPickRepository.cs" />
     <Compile Include="DataAccess\Repository\Implementation\DapperPoolEntryRepository.cs" />
+    <Compile Include="DataAccess\Repository\Implementation\DapperAthletePickRepository.cs" />
+    <Compile Include="DataAccess\Repository\Implementation\DapperRepositoryCollection.cs" />
     <Compile Include="DataAccess\Repository\Implementation\DapperTeamRepository.cs" />
     <Compile Include="DataAccess\Repository\Implementation\DapperAthleteRepository.cs" />
     <Compile Include="DataAccess\Repository\Implementation\SqlConnectionManager.cs" />
+    <Compile Include="DataAccess\Repository\Interface\ITeamPickRepository.cs" />
+    <Compile Include="DataAccess\Repository\Interface\IAthletePickRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\IPoolEntryRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\ITeamRepository.cs" />
     <Compile Include="DataAccess\Repository\Interface\IAthleteRepository.cs" />
