db and test wip

--- a/KS.SportsPool.MVC/Web.config
+++ b/KS.SportsPool.MVC/Web.config
@@ -13,7 +13,8 @@
       providerName="System.Data.SqlClient" />
     <add name="HockeyPoolDB" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=KS.SportsPool.Database;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>    
+  <appSettings>
+    <add key="PrizeAmounts" value="100,200,300"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
