--- a/KS.SportsPool.Data.Test/App.config
+++ b/KS.SportsPool.Data.Test/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="HockeyPoolDB" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=KS.SportsPool.Database_TEST;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
