--- a/KS.SportsPool.Data.Test/KS.SportsPool.Data.Test.csproj
+++ b/KS.SportsPool.Data.Test/KS.SportsPool.Data.Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DataAccess\Repository\Implementation\DapperTeamRepositoryTest.cs" />
     <Compile Include="DataAccess\Repository\Implementation\DapperAthleteRepositoryTest.cs" />
     <Compile Include="DataAccess\Repository\Implementation\RepositoryTestHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
