Images for MVC site

--- a/KS.SportsPool.MVC/KS.SportsPool.MVC.csproj
+++ b/KS.SportsPool.MVC/KS.SportsPool.MVC.csproj
@@ -186,7 +186,99 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\check.png" />
+    <Content Include="Images\error.png" />
     <Content Include="Images\NHL_Shield.png" />
+    <Content Include="Images\Teams\ANA_100.png" />
+    <Content Include="Images\Teams\ANA_200.png" />
+    <Content Include="Images\Teams\ANA_50.png" />
+    <Content Include="Images\Teams\ARI_100.png" />
+    <Content Include="Images\Teams\ARI_200.png" />
+    <Content Include="Images\Teams\ARI_50.png" />
+    <Content Include="Images\Teams\BOS_100.png" />
+    <Content Include="Images\Teams\BOS_200.png" />
+    <Content Include="Images\Teams\BOS_50.png" />
+    <Content Include="Images\Teams\BUF_100.png" />
+    <Content Include="Images\Teams\BUF_200.png" />
+    <Content Include="Images\Teams\BUF_50.png" />
+    <Content Include="Images\Teams\CAR_100.png" />
+    <Content Include="Images\Teams\CAR_200.png" />
+    <Content Include="Images\Teams\CAR_50.png" />
+    <Content Include="Images\Teams\CBJ_100.png" />
+    <Content Include="Images\Teams\CBJ_200.png" />
+    <Content Include="Images\Teams\CBJ_50.png" />
+    <Content Include="Images\Teams\CGY_100.png" />
+    <Content Include="Images\Teams\CGY_200.png" />
+    <Content Include="Images\Teams\CGY_50.png" />
+    <Content Include="Images\Teams\CHI_100.png" />
+    <Content Include="Images\Teams\CHI_200.png" />
+    <Content Include="Images\Teams\CHI_50.png" />
+    <Content Include="Images\Teams\COL_100.png" />
+    <Content Include="Images\Teams\COL_200.png" />
+    <Content Include="Images\Teams\COL_50.png" />
+    <Content Include="Images\Teams\DAL_100.png" />
+    <Content Include="Images\Teams\DAL_200.png" />
+    <Content Include="Images\Teams\DAL_50.png" />
+    <Content Include="Images\Teams\DET_100.png" />
+    <Content Include="Images\Teams\DET_200.png" />
+    <Content Include="Images\Teams\DET_50.png" />
+    <Content Include="Images\Teams\EDM_100.png" />
+    <Content Include="Images\Teams\EDM_200.png" />
+    <Content Include="Images\Teams\EDM_50.png" />
+    <Content Include="Images\Teams\FLA_100.png" />
+    <Content Include="Images\Teams\FLA_200.png" />
+    <Content Include="Images\Teams\FLA_50.png" />
+    <Content Include="Images\Teams\LAK_100.png" />
+    <Content Include="Images\Teams\LAK_200.png" />
+    <Content Include="Images\Teams\LAK_50.png" />
+    <Content Include="Images\Teams\MIN_100.png" />
+    <Content Include="Images\Teams\MIN_200.png" />
+    <Content Include="Images\Teams\MIN_50.png" />
+    <Content Include="Images\Teams\MTL_100.png" />
+    <Content Include="Images\Teams\MTL_200.png" />
+    <Content Include="Images\Teams\MTL_50.png" />
+    <Content Include="Images\Teams\NJD_100.png" />
+    <Content Include="Images\Teams\NJD_200.png" />
+    <Content Include="Images\Teams\NJD_50.png" />
+    <Content Include="Images\Teams\NSH_100.png" />
+    <Content Include="Images\Teams\NSH_200.png" />
+    <Content Include="Images\Teams\NSH_50.png" />
+    <Content Include="Images\Teams\NYI_100.png" />
+    <Content Include="Images\Teams\NYI_200.png" />
+    <Content Include="Images\Teams\NYI_50.png" />
+    <Content Include="Images\Teams\NYR_100.png" />
+    <Content Include="Images\Teams\NYR_200.png" />
+    <Content Include="Images\Teams\NYR_50.png" />
+    <Content Include="Images\Teams\OTT_100.png" />
+    <Content Include="Images\Teams\OTT_200.png" />
+    <Content Include="Images\Teams\OTT_50.png" />
+    <Content Include="Images\Teams\PHI_100.png" />
+    <Content Include="Images\Teams\PHI_200.png" />
+    <Content Include="Images\Teams\PHI_50.png" />
+    <Content Include="Images\Teams\PIT_100.png" />
+    <Content Include="Images\Teams\PIT_200.png" />
+    <Content Include="Images\Teams\PIT_50.png" />
+    <Content Include="Images\Teams\SJS_100.png" />
+    <Content Include="Images\Teams\SJS_200.png" />
+    <Content Include="Images\Teams\SJS_50.png" />
+    <Content Include="Images\Teams\STL_100.png" />
+    <Content Include="Images\Teams\STL_200.png" />
+    <Content Include="Images\Teams\STL_50.png" />
+    <Content Include="Images\Teams\TBL_100.png" />
+    <Content Include="Images\Teams\TBL_200.png" />
+    <Content Include="Images\Teams\TBL_50.png" />
+    <Content Include="Images\Teams\TOR_100.png" />
+    <Content Include="Images\Teams\TOR_200.png" />
+    <Content Include="Images\Teams\TOR_50.png" />
+    <Content Include="Images\Teams\VAN_100.png" />
+    <Content Include="Images\Teams\VAN_200.png" />
+    <Content Include="Images\Teams\VAN_50.png" />
+    <Content Include="Images\Teams\WPG_100.png" />
+    <Content Include="Images\Teams\WPG_200.png" />
+    <Content Include="Images\Teams\WPG_50.png" />
+    <Content Include="Images\Teams\WSH_100.png" />
+    <Content Include="Images\Teams\WSH_200.png" />
+    <Content Include="Images\Teams\WSH_50.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\KSSportsPool.pubxml" />
@@ -216,6 +308,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Pools.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Pools.cshtml" />
+    <Content Include="Views\Admin\Teams.cshtml" />
+    <Content Include="Views\Admin\Athletes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
