--- a/KS.SportsPool.MVC/KS.SportsPool.MVC.csproj
+++ b/KS.SportsPool.MVC/KS.SportsPool.MVC.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PoolViewModel.cs" />
+    <Compile Include="Models\PoolListViewModel.cs" />
     <Compile Include="Models\AthleteViewModel.cs" />
     <Compile Include="Models\AthleteListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -315,6 +317,8 @@
     <Content Include="Views\Admin\AthleteList.cshtml" />
     <Content Include="Views\Admin\TeamGrid.cshtml" />
     <Content Include="Views\Admin\AthleteGrid.cshtml" />
+    <Content Include="Views\Admin\PoolList.cshtml" />
+    <Content Include="Views\Admin\PoolGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
